# AIWatcher

./: .gitignore  README.md  create_aiwatcher.sh  pyproject.toml
learn_stacks/: BeautifulSoup_basis.md  SQLAlchemy_basis.md
src/aiwatcher/api/schemas/: article.py  entity.py  summary.py
src/aiwatcher/core/: article.py  config.py
src/aiwatcher/database/: models.py
src/aiwatcher/scraper/: arxiv_scraper.py  berkeley_ai_scraper.py  get_articles.py  google_ai_scraper.py  huggingface_scraper.py  meta_ai_scraper.py  mit_news_scraper.py  openai_scraper.py  papers_with_code_scraper.py  stanford_hai_scraper.py
